--- a/html/game.html
+++ b/html/game.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="UTF-8" />
         <title>New Game</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="styles/styles.css" />
     </head>
     <body>
         
     <h1>New Game</h1>
         
-        <div id="button"><a href="index.html">Back to Index</a></div>
+        <div id="button"><a href="html/index.html">Back to Index</a></div>
 
     </body>
 </html>
