--- a/404.html
+++ b/404.html
@@ -11,7 +11,7 @@
             window.location.replace(path + ".html");
         }
     </script>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <main>
