--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
         
     <h1>New Game</h1>
         
-        <div id="button"><a href="html/index.html">Back to Index</a></div>
+        <div id="button"><a href="index.html">Back to Index</a></div>
 
     </body>
 </html>
