--- a/game.html
+++ b/game.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>New Game</title>
-        <link rel="stylesheet" href="styles/styles.css" />
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="icon" type="image/x-icon" href="images/Spade2.png">
     </head>
     <body>
         
