--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>New Game</title>
         <link rel="stylesheet" href="styles.css" />
-        <link rel="icon" type="image/x-icon" href="images/Spade2.png">
+        <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
     <body>
         <h1>New Game</h1>
