Update and rename game.html to create.html

--- a/create.html
+++ b/create.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>New Game</title>
+        <title>Create A Game</title>
         <link rel="stylesheet" href="styles.css" />
         <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
     <body>
-        <h1>New Game</h1>
+        <h1>Create A Game</h1>
         <div id="button"><a href="index.html">Back to Index</a></div>
     </body>
 </html>
