--- a/join.html
+++ b/join.html
@@ -7,7 +7,7 @@
         <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
     <body>
-        <h1>New Game</h1>
+        <h1>Join A Game</h1>
         <div id="button"><a href="index.html">Back to Index</a></div>
     </body>
 </html>
