--- a/join.html
+++ b/join.html
@@ -9,5 +9,6 @@
     <body>
         <h1>Join A Game</h1>
         <div id="button"><a href="index.html">Back to Index</a></div>
+        <div id="button"><a href="game.html">Join Game 1</a></div>
     </body>
 </html>
