--- a/game.html
+++ b/game.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css" />
         <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
-    <body>
+    <body class="game-page">
         <h1>Game In Progress</h1>
         <div id="button"><a href="index.html">Back to Index</a></div>
     </body>
