--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Dai Di Online</title>
-        <link rel="stylesheet" href="styles/styles.css" />
+        <link rel="stylesheet" href="styles/styles.css">
         <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
     <body>
