--- a/game.html
+++ b/game.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <title>Game In Progress</title>
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="styles/styles.css">
         <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
     <body class="game-page">
