--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
     </head>
     <body>
         <h1 class="title">Welcome to Dai Di Online</h1>
-        <div id="button"><a href="join.html">Join A Game</a></div>
-        <div id="button"><a href="create.html">Create A Game</a></div>
+        <div class="buttons">
+            <div class="button">
+                <h3><a href="join.html">Join A Game</a></h3>
+            </div>
+            <div class="button">
+                <h3><a href="create.html">Create A Game</a></h3>
+            </div>
+        </div>
         
         <img src="static/Diamond2.png" alt="Two of Diamonds" width="100">
         <img src="static/Club2.png" alt="Two of Clubs" width="100">
