--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <h1 class="title">Welcome to Dai Di Online</h1>
         <div class="buttons">
             <div class="button">
-                <h3><a href="join.html">Join A Game</a></h3>
+                <p><a href="join.html">Join A Game</a></p>
             </div>
             <div class="button">
-                <h3><a href="create.html">Create A Game</a></h3>
+                <p><a href="create.html">Create A Game</a></p>
             </div>
         </div>
         
