--- a/create.html
+++ b/create.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Create A Game</title>
+        <title>Create Game</title>
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
