--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
         <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
     <body>
+        <header>
+            <div class="header-left">Dai Di Online</div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="join.html">Join</a></li>
+                    <li><a href="create.html">Create</a></li>
+                    <li><a href="rules.html">Rulez</a></li>
+                </ul>
+            </nav>
+        </header>
         <h1 class="title">Welcome to Dai Di Online</h1>
         <div class="buttons">
             <div class="button">
