--- a/join.html
+++ b/join.html
@@ -7,8 +7,17 @@
         <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
     <body>
-        <h1>Join A Game</h1>
-        <div id="button"><a href="index.html">Back to Index</a></div>
+        <header>
+            <div class="header-left">Dai Di Join Game</div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="join.html">Join</a></li>
+                    <li><a href="create.html">Create</a></li>
+                    <li><a href="rules.html">Rulez</a></li>
+                </ul>
+            </nav>
+        </header>
         <div id="button"><a href="game.html">Join Game 1</a></div>
     </body>
 </html>
