--- a/join.html
+++ b/join.html
@@ -18,6 +18,37 @@
                 </ul>
             </nav>
         </header>
-        <div id="button"><a href="game.html">Join Game 1</a></div>
+        <div class="joinContainer">
+            <div class="side-images left">
+                <img src="static/Diamonds2.png" alt="Two of Diamonds" class="side-image">
+                <img src="static/Club2.png" alt="Two of Clubs" class="side-image">
+            </div>
+
+            <div class="games">
+                <div class="game">
+                    <a href="game.html">
+                        <span class="room-id">Room #00000</span>
+                        <span class="player-count">1/4 Players</span>
+                    </a>
+                </div>
+                <div class="game">
+                    <a href="game.html">
+                        <span class="room-id">Room #12345</span>
+                        <span class="player-count">2/4 Players</span>
+                    </a>
+                </div>
+                <div class="game">
+                    <a href="game.html">
+                        <span class="room-id">Room #88999</span>
+                        <span class="player-count">3/4 Players</span>
+                    </a>
+                </div>
+            </div>
+
+            <div class="side-images right">
+                <img src="static/Heart2.png" alt="Two of Hearts" class="side-image">
+                <img src="static/Spade2.png" alt="Two of Spades" class="side-image">
+            </div>
+        </div>
     </body>
 </html>
