--- a/join.html
+++ b/join.html
@@ -20,7 +20,7 @@
         </header>
         <div class="joinContainer">
             <div class="side-images left">
-                <img src="static/Diamonds2.png" alt="Two of Diamonds" class="side-image">
+                <img src="static/Diamond2.png" alt="Two of Diamonds" class="side-image">
                 <img src="static/Club2.png" alt="Two of Clubs" class="side-image">
             </div>
 
