--- a/join.html
+++ b/join.html
@@ -18,37 +18,31 @@
                 </ul>
             </nav>
         </header>
-        <div class="joinContainer">
-            <div class="side-images left">
-                <img src="static/Diamond2.png" alt="Two of Diamonds" class="side-image">
-                <img src="static/Club2.png" alt="Two of Clubs" class="side-image">
+        <div class="games">
+            <div class="game">
+                <a href="game.html">
+                    <span class="room-id">Room #00000</span>
+                    <span class="player-count">1/4 Players</span>
+                </a>
             </div>
-
-            <div class="games">
-                <div class="game">
-                    <a href="game.html">
-                        <span class="room-id">Room #00000</span>
-                        <span class="player-count">1/4 Players</span>
-                    </a>
-                </div>
-                <div class="game">
-                    <a href="game.html">
-                        <span class="room-id">Room #12345</span>
-                        <span class="player-count">2/4 Players</span>
-                    </a>
-                </div>
-                <div class="game">
-                    <a href="game.html">
-                        <span class="room-id">Room #88999</span>
-                        <span class="player-count">3/4 Players</span>
-                    </a>
-                </div>
+            <div class="game">
+                <a href="game.html">
+                    <span class="room-id">Room #12345</span>
+                    <span class="player-count">2/4 Players</span>
+                </a>
             </div>
-
-            <div class="side-images right">
-                <img src="static/Heart2.png" alt="Two of Hearts" class="side-image">
-                <img src="static/Spade2.png" alt="Two of Spades" class="side-image">
+            <div class="game">
+                <a href="game.html">
+                    <span class="room-id">Room #88999</span>
+                    <span class="player-count">3/4 Players</span>
+                </a>
             </div>
         </div>
+        
+        <img src="static/Diamond2.png" alt="Two of Diamonds" width="100">
+        <img src="static/Club2.png" alt="Two of Clubs" width="100">
+        <img src="static/Heart2.png" alt="Two of Hearts" width="100">
+        <img src="static/Spade2.png" alt="Two of Spades" width="100">
+
     </body>
 </html>
