--- a/rules.html
+++ b/rules.html
@@ -19,11 +19,13 @@
             </nav>
         </header>
         <h1 class="title">The Dai Di Rulez</h1>
-        <ul>
-          <li>Yap</li>
-          <li>Yap Yap</li>
-          <li>Yap Yap Yap</li>
-        </ul>
+        <div class="rules">
+            <ul>
+                <li>Yap</li>
+                <li>Yap Yap</li>
+                <li>Yap Yap Yap</li>
+            </ul>
+        </div>
         
         <img src="static/Diamond2.png" alt="Two of Diamonds" width="100">
         <img src="static/Club2.png" alt="Two of Clubs" width="100">
