--- a/create.html
+++ b/create.html
@@ -19,5 +19,8 @@
             </nav>
         </header>
         <h1>Create A Game</h1>
+        <div class="create">
+            <p>Yap Yap</p>
+        </div>
     </body>
 </html>
