--- a/rules.html
+++ b/rules.html
@@ -20,10 +20,19 @@
         </header>
         <h1 class="title">The Dai Di Rulez</h1>
         <div class="rules">
-            <ul>
-                <li>Yap</li>
-                <li>Yap Yap</li>
-                <li>Yap Yap Yap</li>
+            <ul class="list">
+                <li><b>Goal:</b> to empty your hand first</li>
+                <li>Cards are ordered from lowest to highest, as such:</li>
+                    <ul>
+                        <li>3, 4, 5, 6, 7, 8, 9, 10, J, Q, K, A, 2</li>
+                    </ul>
+                <li>Suits are ordered from lowest to highest, as such:</li>
+                    <ul>
+                        <li>Diamonds&diams;, Clubs&clubs;, Hearts&hearts;, Spades&spades;</li>
+                    </ul>
+                <br>
+                <li>The following are valid plays you can make:</li>
+                <br>
             </ul>
         </div>
         
