--- a/create.html
+++ b/create.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <div class="header-left">Dai Di Online</div>
+            <div class="header-left">Dai Di Create Game</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
