--- a/rules.html
+++ b/rules.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+<link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
         <meta charset="UTF-8" />
         <title>Join Game</title>
         <link rel="stylesheet" href="styles/styles.css">
@@ -8,7 +9,7 @@
     </head>
     <body>
         <header>
-            <div class="header-left">Dai Di Rulez</div>
+            <div class="header-left">Dai Di Join Game</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -30,7 +31,8 @@
                     <ul>
                         <li>Diamonds&diams;, Clubs&clubs;, Hearts&hearts;, Spades&spades;</li>
                     </ul>
-                <br>
+            </ul>
+            <ul class="list">
                 <li>The following are valid plays you can make:</li>
                 <br>
             </ul>
