--- a/rules.html
+++ b/rules.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <div class="header-left">Dai Di Join Game</div>
+            <div class="header-left">Dai Di Rulez</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
