--- a/rules.html
+++ b/rules.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-<link type="text/css" rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"/>
         <meta charset="UTF-8" />
         <title>Join Game</title>
         <link rel="stylesheet" href="styles/styles.css">
@@ -19,7 +18,7 @@
                 </ul>
             </nav>
         </header>
-        <h1 class="title">The Dai Di Rulez</h1>
+        <h1>The Dai Di Rulez</h1>
         <div class="rules">
             <ul class="list">
                 <li><b>Goal:</b> to empty your hand first</li>
