--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </ul>
             </nav>
         </header>
-        <h1 class="title">Welcome to Dai Di Online</h1>
+        <h1>Welcome to Dai Di Online</h1>
         <div class="buttons">
             <div class="button">
                 <p><a href="join.html">Join Game</a></p>
