--- a/rules.html
+++ b/rules.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Rules</title>
+        <title>Dai Di Rules</title>
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="icon" type="image/x-icon" href="static/Spade2.png">
     </head>
