--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <p><a href="join.html">Join Game</a></p>
             </div>
             <div class="button">
+                <p><a href="rules.html">Dai Di Rulez</a></p>
+            </div>
+            <div class="button">
                 <p><a href="create.html">Create Game</a></p>
             </div>
         </div>
