--- a/index.html
+++ b/index.html
@@ -19,21 +19,29 @@
             </nav>
         </header>
         <h1>Welcome to Dai Di Online</h1>
-        <div class="buttons">
-            <div class="button">
-                <p><a href="join.html">Join Game</a></p>
+        
+        <div class="page">
+            <div class="left">
+                <img src="static/Diamond2.png" alt="Two of Diamonds" width="50%">
+                <img src="static/Club2.png" alt="Two of Clubs" width="50%">
             </div>
-            <div class="button">
-                <p><a href="rules.html">Dai Di Rulez</a></p>
+            <div class="middle">
+                <div class="buttons">
+                    <div class="button">
+                        <p><a href="create.html">Create Game</a></p>
+                    </div>
+                    <div class="button">
+                        <p><a href="join.html">Join Game</a></p>
+                    </div>
+                    <div class="button">
+                        <p><a href="rules.html">Rulez</a></p>
+                    </div>
+                </div>
             </div>
-            <div class="button">
-                <p><a href="create.html">Create Game</a></p>
+            <div class="right">
+                <img src="static/Heart2.png" alt="Two of Hearts" width="50%">
+                <img src="static/Spade2.png" alt="Two of Spades" width="50%">
             </div>
         </div>
-        
-        <img src="static/Diamond2.png" alt="Two of Diamonds" width="100">
-        <img src="static/Club2.png" alt="Two of Clubs" width="100">
-        <img src="static/Heart2.png" alt="Two of Hearts" width="100">
-        <img src="static/Spade2.png" alt="Two of Spades" width="100">
     </body>
 </html>
