--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         
         <div class="page">
             <div class="left">
-                <img src="static/Diamond2.png" alt="Two of Diamonds" width="50%">
-                <img src="static/Club2.png" alt="Two of Clubs" width="50%">
+                <img src="static/Diamond2.png" alt="Two of Diamonds">
+                <img src="static/Club2.png" alt="Two of Clubs">
             </div>
             <div class="middle">
                 <div class="buttons">
@@ -39,8 +39,8 @@
                 </div>
             </div>
             <div class="right">
-                <img src="static/Heart2.png" alt="Two of Hearts" width="50%">
-                <img src="static/Spade2.png" alt="Two of Spades" width="50%">
+                <img src="static/Heart2.png" alt="Two of Hearts">
+                <img src="static/Spade2.png" alt="Two of Spades">
             </div>
         </div>
     </body>
