--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         
         <div class="page">
             <div class="left">
-                <img src="static/Diamond2.png" alt="Two of Diamonds">
-                <img src="static/Club2.png" alt="Two of Clubs">
+                <img src="static/Diamond2.png" alt="Two of Diamonds" transform: rotate(-45deg)>
+                <img src="static/Club2.png" alt="Two of Clubs" transform: rotate(45deg)>
             </div>
             <div class="middle">
                 <div class="buttons">
