--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <div class="header-left">Dai Di Online (A.K.A Big Two)</div>
+            <div class="header-left">Dai Di Online (Big Two)</div>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
