--- a/join.html
+++ b/join.html
@@ -18,30 +18,38 @@
                 </ul>
             </nav>
         </header>
-        <div class="games">
-            <div class="game">
-                <a href="game.html">
-                    <span class="room-id">Room #00000</span>
-                    <span class="player-count">1/4 Players</span>
-                </a>
+        
+        <div class="page">
+            <div class="left">
+                <img src="static/Diamond2.png" alt="Two of Diamonds">
+                <img src="static/Club2.png" alt="Two of Clubs">
             </div>
-            <div class="game">
-                <a href="game.html">
-                    <span class="room-id">Room #12345</span>
-                    <span class="player-count">2/4 Players</span>
-                </a>
+            <div class="middle">
+                <div class="games">
+                    <div class="game">
+                        <a href="game.html">
+                            <span class="room-id">Room #00000</span>
+                            <span class="player-count">1/4 Players</span>
+                        </a>
+                    </div>
+                    <div class="game">
+                        <a href="game.html">
+                            <span class="room-id">Room #12345</span>
+                            <span class="player-count">2/4 Players</span>
+                        </a>
+                    </div>
+                    <div class="game">
+                        <a href="game.html">
+                            <span class="room-id">Room #88999</span>
+                            <span class="player-count">3/4 Players</span>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="game">
-                <a href="game.html">
-                    <span class="room-id">Room #88999</span>
-                    <span class="player-count">3/4 Players</span>
-                </a>
+            <div class="right">
+                <img src="static/Heart2.png" alt="Two of Hearts">
+                <img src="static/Spade2.png" alt="Two of Spades">
             </div>
         </div>
-        
-        <img src="static/Diamond2.png" alt="Two of Diamonds" width="100">
-        <img src="static/Club2.png" alt="Two of Clubs" width="100">
-        <img src="static/Heart2.png" alt="Two of Hearts" width="100">
-        <img src="static/Spade2.png" alt="Two of Spades" width="100">
     </body>
 </html>
