--- a/join.html
+++ b/join.html
@@ -18,7 +18,7 @@
                 </ul>
             </nav>
         </header>
-        
+        <h1>Join A Game</h1>
         <div class="page">
             <div class="left">
                 <img src="static/Diamond2.png" alt="Two of Diamonds">
