--- a/rules.html
+++ b/rules.html
@@ -19,27 +19,32 @@
             </nav>
         </header>
         <h1>The Dai Di Rulez</h1>
-        <div class="rules">
-            <ul class="list">
-                <li><b>Goal:</b> to empty your hand first</li>
-                <li>Cards are ordered from lowest to highest, as such:</li>
-                    <ul>
-                        <li>3, 4, 5, 6, 7, 8, 9, 10, J, Q, K, A, 2</li>
-                    </ul>
-                <li>Suits are ordered from lowest to highest, as such:</li>
-                    <ul>
-                        <li>Diamonds&diams;, Clubs&clubs;, Hearts&hearts;, Spades&spades;</li>
-                    </ul>
-            </ul>
-            <ul class="list">
-                <li>The following are valid plays you can make:</li>
-                <br>
-            </ul>
-        </div>
         
-        <img src="static/Diamond2.png" alt="Two of Diamonds" width="100">
-        <img src="static/Club2.png" alt="Two of Clubs" width="100">
-        <img src="static/Heart2.png" alt="Two of Hearts" width="100">
-        <img src="static/Spade2.png" alt="Two of Spades" width="100">
+        <div class="page">
+            <div class="left">
+                <img src="static/Diamond2.png" alt="Two of Diamonds">
+                <img src="static/Club2.png" alt="Two of Clubs">
+            </div>
+            <div class="middle">
+                <div class="rules">
+                    <ul class="list">
+                        <li><b>Goal:</b> to empty your hand first</li>
+                        <li>Cards are ordered from lowest to highest, as such:</li>
+                            <ul>
+                                <li>3, 4, 5, 6, 7, 8, 9, 10, J, Q, K, A, 2</li>
+                            </ul>
+                        <li>Suits are ordered from lowest to highest, as such:</li>
+                            <ul>
+                                <li>Diamonds&diams;, Clubs&clubs;, Hearts&hearts;, Spades&spades;</li>
+                            </ul>
+                        <li>The following are valid plays you can make:</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="right">
+                <img src="static/Heart2.png" alt="Two of Hearts">
+                <img src="static/Spade2.png" alt="Two of Spades">
+            </div>
+        </div>
     </body>
 </html>
