--- a/rules.html
+++ b/rules.html
@@ -25,21 +25,19 @@
                 <img src="static/Diamond2.png" alt="Two of Diamonds">
                 <img src="static/Club2.png" alt="Two of Clubs">
             </div>
-            <div class="middle">
-                <div class="rules">
-                    <ul>
-                        <li><b>Goal:</b> to empty your hand first</li>
-                        <li>Cards are ordered from lowest to highest, as such:</li>
-                            <ul>
-                                <li>3, 4, 5, 6, 7, 8, 9, 10, J, Q, K, A, 2</li>
-                            </ul>
-                        <li>Suits are ordered from lowest to highest, as such:</li>
-                            <ul>
-                                <li>Diamonds&diams;, Clubs&clubs;, Hearts&hearts;, Spades&spades;</li>
-                            </ul>
-                        <li>The following are valid plays you can make:</li>
-                    </ul>
-                </div>
+            <div class="rules-middle">
+                <ul>
+                    <li><b>Goal:</b> to empty your hand first</li>
+                    <li>Cards are ordered from lowest to highest, as such:</li>
+                        <ul>
+                            <li>3, 4, 5, 6, 7, 8, 9, 10, J, Q, K, A, 2</li>
+                        </ul>
+                    <li>Suits are ordered from lowest to highest, as such:</li>
+                        <ul>
+                            <li>Diamonds&diams;, Clubs&clubs;, Hearts&hearts;, Spades&spades;</li>
+                        </ul>
+                    <li>The following are valid plays you can make:</li>
+                </ul>
             </div>
             <div class="right">
                 <img src="static/Heart2.png" alt="Two of Hearts">
