--- a/rules.html
+++ b/rules.html
@@ -26,18 +26,16 @@
                 <img src="static/Club2.png" alt="Two of Clubs">
             </div>
             <div class="rules-middle">
-                <ul>
-                    <li><b>Goal:</b> to empty your hand first</li>
-                    <li>Cards are ordered from lowest to highest, as such:</li>
-                        <ul>
-                            <li>3, 4, 5, 6, 7, 8, 9, 10, J, Q, K, A, 2</li>
-                        </ul>
-                    <li>Suits are ordered from lowest to highest, as such:</li>
-                        <ul>
-                            <li>Diamonds&diams;, Clubs&clubs;, Hearts&hearts;, Spades&spades;</li>
-                        </ul>
-                    <li>The following are valid plays you can make:</li>
-                </ul>
+                <p><b>Goal:</b> to empty your hand first</p>
+                <p>Cards are ordered from lowest to highest, as such:</p>
+                    <ul>
+                        <li>3, 4, 5, 6, 7, 8, 9, 10, J, Q, K, A, 2</li>
+                    </ul>
+                <p>Suits are ordered from lowest to highest, as such:</p>
+                    <ul>
+                        <li>Diamonds&diams;, Clubs&clubs;, Hearts&hearts;, Spades&spades;</li>
+                    </ul>
+                <p>The following are valid plays you can make:</p>
             </div>
             <div class="right">
                 <img src="static/Heart2.png" alt="Two of Hearts">
