--- a/create.html
+++ b/create.html
@@ -21,7 +21,7 @@
         </header>
         <h1>Create A Game</h1>
         <div class="create">
-            <form action="/game.html">
+            <form action="/lobby.html">
                 <label for="rname">Room name:</label>
                 <input type="text" id="rname" name="rname"><br><br>
 
