--- a/create.html
+++ b/create.html
@@ -33,10 +33,7 @@
                     <input type="text" id="rpassword" name="rpassword"><br><br>
                 </div>
 
-                <label for="rname">Room name:</label>
-                <input type="text" id="rname" name="rname"><br><br>
-
-                <label for="playercount">Player count:</label>
+                <label for="playercount">Player count (1-4):</label>
                 <input type="range" id="playercount" name="playercount" min="1" max="4"><br><br>
 
                 <input type="reset" value="Reset">
