--- a/lobby.html
+++ b/lobby.html
@@ -19,8 +19,20 @@
             </nav>
         </header>
         <h1>Lobby</h1>
-        <div class="lobby">
-        
+        <div class="page">
+            <div class="left">
+                <img src="static/Diamond2.png" alt="Two of Diamonds">
+                <img src="static/Club2.png" alt="Two of Clubs">
+            </div>
+            <div class="middle">
+                <div class="lobby">
+                    
+                </div>
+            </div>
+            <div class="right">
+                <img src="static/Heart2.png" alt="Two of Hearts">
+                <img src="static/Spade2.png" alt="Two of Spades">
+            </div>
         </div>
     </body>
 </html>
