--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Dai Di Online</title>
         <link rel="stylesheet" href="styles/styles.css">
-        <link rel="icon" type="image/x-icon" href="static/Spade2.png">
+        <link rel="icon" type="image/x-icon" href="static/Spades2.png">
     </head>
     <body>
         <header>
@@ -22,8 +22,8 @@
         
         <div class="page">
             <div class="left">
-                <img src="static/Diamond2.png" alt="Two of Diamonds">
-                <img src="static/Club2.png" alt="Two of Clubs">
+                <img src="static/Diamonds2.png" alt="Two of Diamonds">
+                <img src="static/Clubs2.png" alt="Two of Clubs">
             </div>
             <div class="middle">
                 <div class="buttons">
@@ -39,8 +39,8 @@
                 </div>
             </div>
             <div class="right">
-                <img src="static/Heart2.png" alt="Two of Hearts">
-                <img src="static/Spade2.png" alt="Two of Spades">
+                <img src="static/Hearts2.png" alt="Two of Hearts">
+                <img src="static/Spades2.png" alt="Two of Spades">
             </div>
         </div>
     </body>
