Updated image names

--- a/join.html
+++ b/join.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Join Game</title>
         <link rel="stylesheet" href="styles/styles.css">
-        <link rel="icon" type="image/x-icon" href="static/Spade2.png">
+        <link rel="icon" type="image/x-icon" href="static/Spades2.png">
     </head>
     <body>
         <header>
@@ -21,8 +21,8 @@
         <h1>Join A Game</h1>
         <div class="page">
             <div class="left">
-                <img src="static/Diamond2.png" alt="Two of Diamonds">
-                <img src="static/Club2.png" alt="Two of Clubs">
+                <img src="static/Diamonds2.png" alt="Two of Diamonds">
+                <img src="static/Clubs2.png" alt="Two of Clubs">
             </div>
             <div class="middle">
                 <div class="games">
@@ -47,8 +47,8 @@
                 </div>
             </div>
             <div class="right">
-                <img src="static/Heart2.png" alt="Two of Hearts">
-                <img src="static/Spade2.png" alt="Two of Spades">
+                <img src="static/Hearts2.png" alt="Two of Hearts">
+                <img src="static/Spades2.png" alt="Two of Spades">
             </div>
         </div>
     </body>
