--- a/rules.html
+++ b/rules.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Dai Di Rules</title>
         <link rel="stylesheet" href="styles/styles.css">
-        <link rel="icon" type="image/x-icon" href="static/Spade2.png">
+        <link rel="icon" type="image/x-icon" href="static/Spades2.png">
     </head>
     <body>
         <header>
@@ -22,8 +22,8 @@
         
         <div class="page">
             <div class="left">
-                <img src="static/Diamond2.png" alt="Two of Diamonds">
-                <img src="static/Club2.png" alt="Two of Clubs">
+                <img src="static/Diamonds2.png" alt="Two of Diamonds">
+                <img src="static/Clubs2.png" alt="Two of Clubs">
             </div>
             <div class="rules-middle">
                 <p><b>Goal:</b> to empty your hand first</p>
@@ -38,8 +38,8 @@
                 <p>The following are valid plays you can make:</p>
             </div>
             <div class="right">
-                <img src="static/Heart2.png" alt="Two of Hearts">
-                <img src="static/Spade2.png" alt="Two of Spades">
+                <img src="static/Hearts2.png" alt="Two of Hearts">
+                <img src="static/Spades2.png" alt="Two of Spades">
             </div>
         </div>
     </body>
