--- a/create.html
+++ b/create.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Create Game</title>
         <link rel="stylesheet" href="styles/styles.css">
-        <link rel="icon" type="image/x-icon" href="static/Spade2.png">
+        <link rel="icon" type="image/x-icon" href="static/Spades2.png">
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
@@ -22,8 +22,8 @@
         <h1>Create A Game</h1>
         <div class="page">
             <div class="left">
-                <img src="static/Diamond2.png" alt="Two of Diamonds">
-                <img src="static/Club2.png" alt="Two of Clubs">
+                <img src="static/Diamonds2.png" alt="Two of Diamonds">
+                <img src="static/Clubs2.png" alt="Two of Clubs">
             </div>
             <div class="middle">
                 <div class="create">
@@ -48,8 +48,8 @@
                 </div>
             </div>
             <div class="right">
-                <img src="static/Heart2.png" alt="Two of Hearts">
-                <img src="static/Spade2.png" alt="Two of Spades">
+                <img src="static/Hearts2.png" alt="Two of Hearts">
+                <img src="static/Spades2.png" alt="Two of Spades">
             </div>
 
             <script>
