--- a/game.html
+++ b/game.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Game In Progress</title>
         <link rel="stylesheet" href="styles/styles.css">
-        <link rel="icon" type="image/x-icon" href="static/Spade2.png">
+        <link rel="icon" type="image/x-icon" href="static/Spades2.png">
     </head>
     <body class="game-page">
         <h1>Game In Progress</h1>
